# source_optimisation_example

./: .gitignore  .gitmodules  Cargo.toml  README.md  plot_results.m
+mot/: optimise2D.m  parse.m  simulate.m
examples/: mot.rs
