[package]
name = "atomecs_source_optimisation_example"
version = "0.1.0"
authors = ["Elliot Bentine <7041164+ElliotB256@users.noreply.github.com>"]
edition = "2018"

[dependencies]
atomecs = { git = "https://github.com/TeamAtomECS/AtomECS", rev="2b26075" }
nalgebra = { version = "0.18", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs="0.14.0"
specs-derive = "0.4.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false